--- a/index.html
+++ b/index.html
@@ -11,25 +11,23 @@
 
 <body>
 
-  <div class="main_img"></div>
+  <div class="first_c">
 
-<div >
-  <img class="centered" src="logo12.png" alt="">
-
-</div>
-
-
+      <img class="img" src="jla.jpg" alt="" width= "100%">
+      <img class="cent" src="logo12.png" alt="">
+      <img class="intro_img" src="intro.png" alt="">
+  </div>
 
 
-  <div class="into_1">
-    <img class="intro_img" src="intro.png" alt="">
-    <h1 class>JUSTICE LEAGUE </h1>
+
+  <div class="second_c">
+    <h1 >JUSTICE LEAGUE </h1>
     <p>The Justice League is an organization comprised of the world's greatest superheroes.
       Together, they operate as a team dedicated to fighting crime and injustice,
       and act as Earth's first line of defense from terrestrial, extra-terrestrial, and inter-dimensional threats.</p>
   </div>
 
-<hr>
+  <hr>
 
 
   <div class="intro_2">
